# microsoft___rDSN

./: .gitignore  CMakeLists.txt  compile_thrift.py  run.sh
.github/workflows/: ci.yml
doc/: eon.overview.h  examples.complexity.h  examples.layer1.h  examples.layer2.h  examples.network.h  extensions.h  how-to.h  install.h
ext/: gitsource.github
ext/gflags/: CMakeLists.txt
ext/gtest/: CMakeLists.txt
ext/protobuf/: CMakeLists.txt
ext/rapidjson/: CMakeLists.txt
ext/thrift/: CMakeLists.txt  install_boost.cmd.template
ext/zookeeper/: CMakeLists.txt
include/dsn/: README.md  service_api_cpp.h  tool_api.h
include/dsn/c/: api_common.h  api_layer1.h  api_layer2.h  api_task.h  api_utilities.h  app_model.h  app_tools.h
include/dsn/cpp/: address.h  auto_codes.h  blob.h  callocator.h  clientlet.h  config_helper.h  function_traits.h  json_helper.h  layer2_handler.h  optional.h  perf_test_helper.h  replicated_service_app.h  rpc_stream.h  safe_string.h  serialization.h  serverlet.h  service_app.h  task_helper.h  test_output_utils.h  test_utils.h  utils.h
include/dsn/cpp/cli/: cli.types.h  cli_types.h
include/dsn/cpp/serialization_helper/: dsn.layer2_types.h  dsn_types.h  protobuf_helper.h  thrift_helper.h
include/dsn/ext/hpc-locks/: sema.h
include/dsn/idl/: GProtoBinaryHelper.cs  GProtoJsonHelper.cs  ThriftBinaryHelper.cs  ThriftJsonHelper.cs
include/dsn/js/: LICENSE  README.md  THRIFT_UPSTREAM.md  dsn.thrift  dsn_transport.js  dsn_types.js  index.cjs  index.d.ts  index.mjs  node.cjs  node.d.ts  node.mjs  package.json
include/dsn/tool-api/: logging_provider.h  message_parser.h  network.h  perf_counter.h  rpc_message.h  task.h  task_spec.h  task_tracker.h  task_worker.h
include/dsn/utility/: autoref_ptr.h  configuration.h  customizable_id.h  exp_delay.h  extensible_object.h  factory_store.h  logging.h  module_init.cpp.h  ports.h  priority_queue.h  singleton.h  singleton_store.h  singleton_vector_store.h  work_queue.h
src/core/: CMakeLists.txt
src/core/dev.utility.core.use/: CMakeLists.txt
src/core/src/: address.cpp  address.test.cpp  aio.perf.test.cpp  aio.test.cpp  app_manager.cpp  app_manager.h  c_api_guard.h  clientlet.test.cpp  command_manager.cpp  command_manager.h  command_manager.test.cpp  configuration.test.cpp  coredump.h  coredump.posix.cpp  coredump.win.cpp  crc.h  customizable_id.test.cpp  disk_engine.cpp  disk_engine.h  env.test.cpp  env_provider.cpp  exp_delay.test.cpp  file_utils.test.cpp  global_checkers.cpp  global_config.cpp  group_address.h  join_point.test.cpp  library_utils.cpp  lock_checker.cpp  logger.perf.test.cpp  logging.cpp  logging.test.cpp  lpc.test.cpp  main.cpp  memory_provider.cpp  message_parser.cpp  network.cpp  perf_counter.test.cpp  perf_counters.cpp  perf_counters.test.cpp  (+29 more)
src/core/src/test/: config-include-common.ini  config-include-cycle-a.ini  config-include-cycle-b.ini  config-include-cycle3-a.ini  config-include-cycle3-b.ini  config-include-cycle3-c.ini  config-include-deep-a.ini  config-include-deep-b.ini  config-include-deep-c.ini  config-include-diamond-a.ini  config-include-diamond-b.ini  config-include-self.ini  config-sample.ini  test.config.core.fj.ini  test.config.core.ini
src/dev/: CMakeLists.txt
src/dev/cpp/: CMakeLists.txt  clientlet.cpp  dsn.layer2_types.cpp  file_utils.cpp  perf_test_helper.cpp  utils.cpp
src/dev/csharp/: Clientlet.cs  NativeCalls.cs  RpcStream.cs  Serverlet.cs  dsn.dev.csharp.csproj
src/dev/utility/: CMakeLists.txt  configuration.cpp  join_point.cpp  logging.cpp
src/plugins/: CMakeLists.txt
src/plugins/apps.echo/: echo.app.example.h  echo.check.h  echo.client.h  echo.client.perf.h  echo.main.cpp  echo.server.h  echo.types.h
src/plugins/apps.echo.csharp/: App.config  echo.csharp.csproj
src/plugins/apps.skv/: multi-meta.sh  perf-test.cmd  simple_kv.app.example.h  simple_kv.client.2.h  simple_kv.client.perf.h  simple_kv.main.cpp  simple_kv.server.h  simple_kv.server.impl.cpp  simple_kv.server.impl.h  simple_kv.types.h  simple_kv_types.cpp  simple_kv_types.h
src/plugins/dist.uri.resolver/: CMakeLists.txt  partition_resolver_simple.cpp  partition_resolver_simple.h  partition_resolver_simple.test.cpp
src/plugins/dist.uri.resolver/test/: gtests  test.config.dist.uri.resolver.ini
src/plugins/tools.common/: asio_net_provider.cpp  asio_net_provider.h  asio_rpc_session.cpp  asio_rpc_session.h  dsn_message_parser.cpp  dsn_message_parser.test.cpp  empty_aio_provider.cpp  fault_injector.cpp  http_message_parser.cpp  lockp.std.test.cpp  native_aio_provider.linux.cpp  native_aio_provider.linux.h  native_aio_provider.posix.cpp  native_aio_provider.win.cpp  net_provider.test.cpp  profiler.cpp  profiler.h  profiler.test.cpp  profiler_command.cpp  profiler_header.h  profiler_output.cpp  raw_message_parser.cpp  simple_logger.cpp  simple_logger.test.cpp  simple_perf_counter.cpp  simple_perf_counter_v2_atomic.cpp  simple_perf_counter_v2_fast.cpp  simple_task_queue.cpp  thrift_message_parser.cpp  thrift_message_parser.h  tracer.cpp
src/plugins/tools.emulator/: CMakeLists.txt  README.md  diske.sim.cpp  emulator.cpp  env.sim.cpp  lockp.sim.test.cpp  native_aio_provider.win.cpp  network.sim.cpp  network.sim.h  scheduler.cpp  scheduler.h  task_engine.sim.cpp  task_engine.sim.h
src/plugins/tools.nfs/: CMakeLists.txt  nfs.types.h  nfs_client.h  nfs_client_impl.cpp  nfs_client_impl.h  nfs_client_impl.test.cpp  nfs_node_impl.cpp  nfs_node_simple.h  nfs_server.h  nfs_server_impl.cpp  nfs_server_impl.h  nfs_types.cpp
src/plugins/tools.nfs/test/: gtests  test.config.tools.nfs.ini
src/plugins_ext/: CMakeLists.txt
src/tests/idl/: CMakeLists.txt  idl_test.main.cpp  idl_test.pb.cc  idl_test.proto  idl_test.thrift  idl_test.types.h  idl_test_types.h  js_binding.test.js  test.cmd
src/tools/cli/: cli.client.h  cli.main.cpp  cli_app.cpp  cli_app.h
src/tools/webstudio/app_package/: WebStudioApi.py  WebStudioApp.py  WebStudioPage.py  WebStudioStatic.py
tutorial/counter.replication/: counter.server.impl.cpp
tutorial/simple_kv/: config.logic.perf.ini
(+6 files in other folders)
